--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "seed": "npx sequelize-cli db:seed:all"
   },
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "pg": "^8.16.3",
