--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "app.js",
   "scripts": {
+    "build": "npx sequelize-cli db:migrate",
     "start": "node app.js",
     "dev": "node app.js",
     "migrate": "npx sequelize-cli db:migrate",
